samples/_failures_safe/1761139071_c17780_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_426afa4a.c: In function ‘main’:
./samples/SAFE/__tmp_426afa4a.c:163:9: error: expected declaration or statement at end of input
  163 |         printf("Enter command: ");
      |         ^~~~~~
./samples/SAFE/__tmp_426afa4a.c:163:9: error: expected declaration or statement at end of input
